# uQuad2

./: .gitignore  README.md  copy_and_own_log.sh
Arduino/Beagle_UAVTalk/: Beagle_UAVTalk.ino  OSD_Func.h  OSD_Vars.h  UAVTalk.h  UAVTalk.ino  URLs
Arduino/TestInversorUART/: TestInversorUART.ino
Arduino/TestLinuxArduino/TestSerial/: TestSerial.ino
Arduino/libraries/FutabaSBUS/: FutabaSBUS.cpp  FutabaSBUS.h
Arduino/libraries/HMC58X3/: HMC58X3.cpp  HMC58X3.h
Arduino/libraries/SimpleTimer/: SimpleTimer.cpp  SimpleTimer.h
Arduino/mongoose_quadcop/: ADXL345.ino  ITG3200.ino  Output.ino  mongoose_quadcop.ino
Arduino/sbus_example/: README  sbus_example.ino
Matlab/Altura/: altura.m
Matlab/CarrotChase/: Instructivo.txt  carrotChase.m  cca.m  simuladorVuelo.m  trayectoria_discreta.txt
Matlab/Control_yaw/: rlocus_yaw.m
Matlab/Muestra_defensa/plot_datos_log/: cuadrado.txt  graficar.m  log_PD_nuevo_1  log_PD_nuevo_2  log_PD_nuevo_3  log_PD_nuevo_4  log_PD_nuevo_5  log_pf_pruebas_1  log_pf_pruebas_2  log_pf_pruebas_3_PD  log_pf_pruebas_4  log_prueba_defensa_1  log_prueba_defensa_2
Matlab/Muestra_defensa/plot_trayectoria_ideal_mas_real/: Plot_data.m  plotPath.m
Matlab/Muestra_defensa/trayectoria para documentacion/: graficar.m  mod2pi.m  trayectoria.txt
Matlab/RealTimePlot/: Plot_data.m
Matlab/log_parser/: graficar_IMU.m  log_uavtalk_parser
Matlab/logs_IMU/: graficar_IMU.m  log_canetigiro2_1  log_canetigiro2_10  log_canetigiro2_11  log_canetigiro2_12  log_canetigiro2_13  log_canetigiro2_2  log_canetigiro2_3  log_canetigiro2_4  log_canetigiro2_5  log_canetigiro2_6  log_canetigiro2_7  log_canetigiro2_8  log_test_IMU_1  log_test_IMU_10  log_test_IMU_11  log_test_IMU_12  log_test_IMU_13  log_test_IMU_14  log_test_IMU_15  log_test_IMU_16  log_test_IMU_17  log_test_IMU_2  log_test_IMU_3  log_test_IMU_4  log_test_IMU_beagle_1  log_test_IMU_beagle_2  log_todo_1  log_todo_1_c  log_todo_2  log_todo_colgado_1  log_todo_colgado_2  log_todo_colgado_3  log_todo_colgado_4  log_todo_colgado_5
logs/: debug.m
logs/23052015/: Kp_1  log_yaw_20_deg_t_1200  log_yaw_40_deg_t_1250  log_yaw_80_deg_t_1300
logs/25052015/: log_1_kp1.txt  log_2_kp1.txt  log_3_kp1.txt  log_open_2_kp1.txt  log_open_3_kp1.txt  log_open_4_kp1.txt
logs/28052015/: log_controlPD_2.txt  log_controlPD_3.txt  log_controlPD_4.txt
logs/31052015/: log_roll_1500_t_1200.txt
logs/DEBUG/: debug.m  graficar.m  log_debug_1  log_debug_1.txt  log_debug_10.txt  log_debug_11.txt  log_debug_2.txt  log_debug_3.txt  log_debug_4.txt  log_debug_5.txt  log_debug_6  log_debug_6.txt  log_debug_7.txt  log_debug_9.txt  log_test_1.txt
src/: CMakeLists.txt  build_cmake.sh  go.sh  imu_comm.h  imu_comm.ino  run.sh  run_cmake.sh  run_make.sh  start.sh  way_points_in.txt  way_points_in_cuadrado.txt
src/AeroQuad_v3.2/: getSerialImu.h
src/AeroQuad_v3.2/AeroQuad/: AeroQuad.ino  UserConfiguration.h
src/AeroQuad_v3.2/Sensor/: Sensor.ino
src/AeroQuad_v3.2/SensorSerial/: SensorSerial.ino
src/CustomBaudrate/: Makefile
src/HMC58X3/: HMC58X3.cpp  HMC58X3.h
src/UAVTalk/: CMakeLists.txt  OSD_Vars.h  UAVTalk.c  UAVTalk.h
src/common/: CMakeLists.txt  quadcop_config.h  quadcop_types.h  uquad_aux_io.c  uquad_aux_io.h  uquad_aux_time.c  uquad_aux_time.h  uquad_config.h
src/control_altura/: CMakeLists.txt  control_altura.c  control_altura.h
src/control_velocidad/: CMakeLists.txt  control_velocidad.c  control_velocidad.h
src/control_yaw/: CMakeLists.txt  control_yaw.c  control_yaw.h
src/futaba_sbus/: CMakeLists.txt  futaba_sbus.c  futaba_sbus.h
src/gps/: CMakeLists.txt  gps_comm.c  gps_comm.h
src/imu/: CMakeLists.txt  imu_comm.c  imu_comm.h
src/kernel_msgq/: CMakeLists.txt  uquad_kernel_msgq.c  uquad_kernel_msgq.h
src/main/: CMakeLists.txt  main.c
src/math/: CMakeLists.txt
src/mongoose_fw/: ADXL345.ino  BMP085.ino  ITG3200.ino  arduino_pre_declare.h  imu_comm.h  imu_comm.ino  mongoose_fw.ino  uquad_aux_math.h  uquad_aux_math.ino  uquad_config.h  uquad_error_codes.h  uquad_kalman.h  uquad_kalman.ino
src/path_following/: CMakeLists.txt  path_following.c  path_following.h
src/path_planning/: CMakeLists.txt  path_planning.c  path_planning.h
src/prueba/: prueba.c
src/sbus_comm/: FutabaSBUS.h  Makefile  SerialPort.c  SerialPort.h
src/sbus_daemon/: CMakeLists.txt  sbus_daemon.c  sbus_daemon.c.Beagle.Only
src/serial_comm/: CMakeLists.txt  custom_baud.c  custom_baud.h  serial_comm.c  serial_comm.h
src/socket/: CMakeLists.txt  socket_comm.c  socket_comm.h
src/test_Parser_UAVTalk/: CMakeLists.txt  UAVTalk.h  main.c  shm_client.c
src/test_UAVTalk/: CMakeLists.txt  OSD_Config.h  OSD_Vars.h  UAVTalk.c  UAVTalk.h  main.c  serial_comm.c  serial_comm.h  uquad_aux_time.c  uquad_aux_time.h
src/test_config_gps/: Makefile  main.c  test_config_gps
src/test_gpsd/: CMakeLists.txt  Makefile  main.c
src/test_gpsd/main/: CMakeLists.txt  main.c
src/test_imu/: CMakeLists.txt  imu_comm.c  imu_comm.h  main.c  uquad_aux_math.c  uquad_aux_math.h  uquad_aux_time.c  uquad_aux_time.h  uquad_error_codes.h
src/test_leer_gps/: Makefile  README  main.c
src/test_msgq/: README  build_all.sh  clean.sh  run.sh
src/test_msgq/test_msgq_client/: Makefile  README  main.c  test_msgq_client
src/test_msgq/test_msgq_server/kernel_msgq/: uquad_kernel_msgq.h
src/test_msgq/test_msgq_server/main/: CMakeLists.txt
src/test_path_planning_discreto/: CMakeLists.txt
src/test_path_planning_discreto/main/: CMakeLists.txt  main.c
src/test_path_planning_discreto/path_planning/: CMakeLists.txt  path_planning.c  path_planning.h
src/test_serial_comm/CustomBaudrate/: README  set_custom_speed.c
src/test_serial_comm/sbus_comm/: CustomBaud.c  CustomBaud.h  FutabaSBUS.c  README  main.c  sbus_comm
src/test_socket/: CMakeLists.txt  main.c
src/uavtalk_parser/: CMakeLists.txt  uavtalk_parser.c  uavtalk_parser.h
trayectorias/cuadrado/: way_points_in.txt
trayectorias/giros izq y der/: way_points_in.txt
trayectorias/mucha curva para documentacion/: way_points_in.txt
trayectorias/muucha curva/: way_points_in.txt
(+25 files in other folders)
