set(main_bin auto_pilot)
add_executable (${main_bin} main)

# Set required libraries
target_link_libraries(${main_bin} uquad_kernel_msgq)
target_link_libraries(${main_bin} uquad_time)
target_link_libraries(${main_bin} uquad_io)
target_link_libraries(${main_bin} futaba_sbus)
target_link_libraries(${main_bin} serial_comm)
target_link_libraries(${main_bin} gps_comm)
target_link_libraries(${main_bin} UAVTalk)
target_link_libraries(${main_bin} control_yaw)
target_link_libraries(${main_bin} path_planning)
target_link_libraries(${main_bin} path_following)
target_link_libraries(${main_bin} socket_comm)
target_link_libraries(${main_bin} imu_comm)
target_link_libraries(${main_bin} uquad_aux_math)
target_link_libraries(${main_bin} control_altura)
target_link_libraries(${main_bin} control_velocidad)
